# windowed-attention-cpu

./: .gitignore  LICENSE  README.md  export_gpt2_c.py  gpt2_forward_windowed.c  gpt2_forward_windowed_blas.c  gpt2_forward_windowed_omp.c  head_compressibility_gpt2.json
executorch/: phase0_toolchain_spike.py  phase2_export_survival.py
executorch/phase1_windowed_sdpa/: CMakeLists.txt  test_differential.py  windowed_sdpa_et.cpp  windowed_sdpa_kernel.cpp  windowed_sdpa_kernel.h  windowed_sdpa_pybind.cpp
executorch/phase3_kv_cache/: CMakeLists.txt  phase3_export_survival.py  test_differential.py  windowed_sdpa_kv_cache_et.cpp  windowed_sdpa_kv_cache_kernel.cpp  windowed_sdpa_kv_cache_kernel.h  windowed_sdpa_kv_cache_pybind.cpp
executorch/phase4_llama/: build_arms.py  compare_device_output.py  diagnose_bf16.py  diagnose_delegation.py  diagnose_xnnpack_nlayers.py  diagnose_xnnpack_one_layer.py  diagnose_xnnpack_segfault.py  diagnose_xnnpack_tiny.py  export_llama.py  head_compressibility_group_Llama-3.2-1B.json  llama_3.2_1b_arms.json  make_test_tokens.py  phase4_3_sanity_check.ipynb  phase4_3_sanity_results.json  phase4_4_export_real_weights.ipynb  phase4_6_export_xnnpack_kaggle.ipynb  real_attention_patch.py
executorch/phase4_llama/android_runner/: CMakeLists.txt  prefill_decode_runner.cpp  reference_forward_runner.cpp
